# PPTutor

./: .gitignore  CHANGELOG.md  DEVLOG.md  QUESTIONS.md  README.md  pptx-finder.spec  pyproject.toml
docs/: com-preview-isolation.md  design.md  feature-tiers-low-cpu.md  version-management-design.md
scripts/: bench_index.py  benchmark_render_priority.py  demo_report.py  demo_themes.py  demo_version_ui.py  demo_window.py  e2e_slimming.py  e2e_version_reconcile.py  e2e_version_ui.py  e2e_versioning.py  gen_shortcut.py  make_demo.py  make_logo.py  shot_atelier.py  shot_detail.py  shot_guidance.py  shot_version_themes.py  smoke_shot.py  stress_user_flows.py  verify_frozen.py  verify_shot.py
tests/: conftest.py  fixtures_gen.py  test_actions.py  test_app_hotkey_toggle.py  test_app_windows.py  test_bg_task.py  test_card.py  test_cluster.py  test_com_only_preview.py  test_compat_renderer.py  test_dashboard.py  test_detail.py  test_document_parser.py  test_empty_hint.py  test_facet.py  test_feature_tiers_low_cpu.py  test_film_report.py  test_group.py  test_health.py  test_health_window.py  test_heatmap_widget.py  test_history.py  test_index_activity_bar.py  test_indexer.py  test_live_index.py  test_multi_type_index.py  test_nav_rail.py  test_package_spec.py  test_parser.py  test_path_policy.py  test_performance_v106.py  test_query_explain.py  test_recall_corner.py  test_recent.py  test_render_cache.py  test_render_ipc.py  test_render_prefetch.py  test_render_priority.py  test_renderer.py  test_report_overlay.py  (+40 more)
tools/: benchmark_feature_tiers.py  gen_heavy_set.py  gen_huge_pptx.py  gen_manifest.py  gen_selftest_set.py  installer.iss  (+3 more)
(+64 files in other folders)
