[project]
name = "pptx-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lin Tian", email = "17210720082@fudan.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "datasketch>=1.10.0",
    "jieba>=0.42.1",
    "lxml>=6.1.1",
    "pyside6>=6.11.1",
    "pywin32>=312",
    "watchdog>=6.0.0",
    "xxhash>=3.7.0",
]

[project.scripts]
pptx-finder = "pptx_finder:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-qt>=4.5.0",
    "python-pptx>=1.0.2",
]
