[project]
name = "pptx-finder"
version = "0.6.0"
description = "本地 PPTX 内容搜索与预览助手（搜内容定位页 / 版本归组 / 托盘常驻）"
readme = "README.md"
authors = [
    { name = "Lin Tian", email = "17210720082@fudan.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "datasketch>=1.10.0",
    "jieba>=0.42.1",
    "lxml>=6.1.1",
    "opencc>=1.3.1",
    "pyside6>=6.11.1",
    "pywin32>=312",
    "watchdog>=6.0.0",
    "xxhash>=3.7.0",
]

[project.scripts]
pptx-finder = "pptx_finder:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.0",
    "pytest-qt>=4.5.0",
    "python-pptx>=1.0.2",
]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
testpaths = ["tests"]
markers = [
    "slow: 真实 PowerPoint COM 等较慢测试（用 -m 'not slow' 跳过）",
]
filterwarnings = [
    "ignore::SyntaxWarning",
]
